fix: flex column alignment in banner

--- a/styles/banner.scss
+++ b/styles/banner.scss
@@ -6,7 +6,6 @@
 
     img {
         width: 250px;
-        height: 100%;
         animation: bounce 2s infinite ease-in-out;
     }
 }
